[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://GodotBatlleBot.scn" type="PackedScene" id=2]
[ext_resource path="res://Rifle_Point.gd" type="Script" id=3]
[ext_resource path="res://Pistol_Point.gd" type="Script" id=4]
[ext_resource path="res://Knifle_Point.gd" type="Script" id=5]
[ext_resource path="res://32-32_white.png" type="Texture" id=6]
[ext_resource path="res://fonts/PixelifySans-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="BoxShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0.764706, 1, 1 )

[sub_resource type="SphereMesh" id=3]
material = SubResource( 2 )
radius = 0.55
height = 0.98

[sub_resource type="CapsuleShape" id=4]
height = 8.1

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1, 0.5, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.180392, 0.898039, 0.239216, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.94902, 0.45098, 0.45098, 1 )
corner_radius_top_left = 35
corner_radius_top_right = 33
corner_radius_bottom_right = 28
expand_margin_right = 85.0
expand_margin_top = 67.0

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 2.0
content_margin_top = 1.0
bg_color = Color( 0.972549, 1, 0.411765, 1 )
border_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 12
expand_margin_left = 5.0
expand_margin_right = 1.0
expand_margin_top = 2.0
expand_margin_bottom = 3.0

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 7 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Rotation_Helper" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Rotation_Helper"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 12, 0 )

[node name="Model" parent="Rotation_Helper" instance=ExtResource( 2 )]

[node name="Gun_Fire_Points" type="Spatial" parent="Rotation_Helper"]

[node name="Rifle_Point" type="Spatial" parent="Rotation_Helper/Gun_Fire_Points"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12, 0 )
script = ExtResource( 3 )

[node name="RayCast" type="RayCast" parent="Rotation_Helper/Gun_Fire_Points/Rifle_Point"]
cast_to = Vector3( 0, 0, 80 )

[node name="Pistol_Point" type="Spatial" parent="Rotation_Helper/Gun_Fire_Points"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12, 7.567 )
script = ExtResource( 4 )

[node name="Knife_Point" type="Spatial" parent="Rotation_Helper/Gun_Fire_Points"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12, 1.966 )
script = ExtResource( 5 )

[node name="Area" type="Area" parent="Rotation_Helper/Gun_Fire_Points/Knife_Point"]

[node name="CollisionShape" type="CollisionShape" parent="Rotation_Helper/Gun_Fire_Points/Knife_Point/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.158136 )
shape = SubResource( 1 )

[node name="Gun_Aim_Point" type="Spatial" parent="Rotation_Helper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12, 12 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="Rotation_Helper/Gun_Aim_Point"]
mesh = SubResource( 3 )
material/0 = null

[node name="FlashLight" type="SpotLight" parent="Rotation_Helper"]
transform = Transform( -0.999741, 0, 0.0227741, 0, 1, 0, -0.0227741, 0, -0.999741, 0, 10.5702, 0 )
light_color = Color( 0.117647, 0.941176, 0.0901961, 1 )
light_energy = 3.1
spot_range = 21.9
spot_attenuation = 1.6245
spot_angle = 42.0
spot_angle_attenuation = 0.840896

[node name="Grenade_Toss_Pos" type="Spatial" parent="Rotation_Helper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.4348, 1.26599 )

[node name="Body_CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0, -1.03362, 0, 1, 0, 0, 6.51878, 0 )
shape = SubResource( 4 )

[node name="Feet_CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1.83889, 0, 0, 0, 1, 0, 0, 0, 1.60201, 0, 0.5, 0 )
shape = SubResource( 5 )

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Crosshair" type="Control" parent="HUD"]
editor/display_folded = true
margin_left = 493.0
margin_top = 279.631
margin_right = 533.0
margin_bottom = 319.631

[node name="Top" type="TextureRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1.5
margin_top = -19.5
margin_right = 3.5
margin_bottom = -3.5
texture = ExtResource( 6 )
expand = true

[node name="Left" type="TextureRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1.5
margin_top = 2.32234
margin_right = 3.5
margin_bottom = 18.3223
texture = ExtResource( 6 )
expand = true

[node name="Right" type="TextureRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3.03678
margin_top = -3.51744
margin_right = 1.96322
margin_bottom = 12.4826
rect_rotation = 90.0098
texture = ExtResource( 6 )
expand = true

[node name="Bottom" type="TextureRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.3223
margin_top = -3.21008
margin_right = 25.3223
margin_bottom = 12.7899
rect_rotation = 90.0098
texture = ExtResource( 6 )
expand = true

[node name="Panel" type="Control" parent="HUD"]
editor/display_folded = true
margin_left = 0.2
margin_top = 559.165
margin_right = 40.2
margin_bottom = 575.085

[node name="Panel_border" type="Panel" parent="HUD/Panel"]
anchor_right = 1.0
margin_top = 1.32751
margin_right = 48.78
margin_bottom = 42.3275
rect_scale = Vector2( 0.99, 1 )
custom_styles/panel = SubResource( 6 )

[node name="Gun_label" type="Label" parent="HUD/Panel"]
margin_left = 13.41
margin_top = -37.24
margin_right = 129.41
margin_bottom = 3.76
rect_scale = Vector2( 1.3, 1.3 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0.858824, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 1
text = "Health: 100
Ammo: 000/000 "

[node name="DeathScreen" type="ColorRect" parent="HUD"]
visible = false
margin_right = 1024.0
margin_bottom = 598.0
color = Color( 0.482353, 0.337255, 0.337255, 1 )

[node name="Label" type="Label" parent="HUD/DeathScreen"]
margin_left = 419.54
margin_top = 276.41
margin_right = 479.46
margin_bottom = 290.41
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "You Died"

